# defacto-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  compile_flags.txt  vcpkg.json
cmake/: compile_dll.cmake  link_game.cmake
engine/: CMakeLists.txt
engine/assets/shaders/: base.frag.glsl  base.vert.glsl
engine/backend/glfw/: input.cpp  input.hpp  window.hpp
engine/include/df/: engine.h  input_manager.h  renderer.h  window.h
engine/include/df/components/: camera.hpp  metadata.hpp  model.hpp  transform.hpp  transform_matrix.hpp
engine/include/df/core/: backend_factory.hpp  engine.h  engine.hpp  service_locator.hpp  world.hpp  world_decs.hpp
engine/include/df/entities/: camera.h  camera.hpp
engine/include/df/input/: input.hpp  input_manager.h  input_system.h  input_system.hpp
engine/include/df/render/: renderer.h  renderer.hpp  shader_program.h  shader_program.hpp  window.h  window.hpp
engine/include/df/ui/: debug.hpp
engine/include/df/utills/: observer.h
engine/include/df/utils/: math.h  math.hpp  random.hpp
engine/resources/shaders/: base.vert.glsl
engine/src/: engine.cpp  renderer.cpp  window.cpp
engine/src/core/: backend_factory.cpp  engine.cpp  world.cpp
engine/src/entities/: camera.cpp
engine/src/input/: input_manager.cpp  input_system.cpp
engine/src/render/: renderer.cpp  shader_program.cpp  window.cpp
engine/src/ui_debug/: ui_manager.cpp
examples/basic/: CMakeLists.txt  main.cpp  test_widget.hpp
examples/basic/resources/models/cube/: multimat.mtl  new_cube.mtl
games/puzzle15/: CMakeLists.txt
games/puzzle15/src/: main.cpp
resources/fonts/: roboto_regular.json
resources/models/cube/: multimat.mtl
resources/shaders/: base.frag.glsl  font.frag.glsl  phong.vert.glsl  shape.frag.glsl  unlit.frag.glsl  unlit.vert.glsl
source/: CMakeLists.txt  generated_shaders.cmake  main.cpp
source/assets/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
source/assets/default/: CMakeLists.txt  cube.cpp  cube.hpp
source/assets/models/: cube.cpp  cube.hpp
source/assets/shaders/: phong.frag.glsl  unlit.frag.glsl
source/backend/: CMakeLists.txt  backend_factory.cpp
source/backend/glfw/: CMakeLists.txt  input.hpp  input_glfw.cpp  input_glfw.hpp  window.cpp  window_glfw.cpp  window_glfw.hpp
source/components/: CMakeLists.txt  camera.hpp  metadata.hpp  model.hpp  point_light.hpp  transform.hpp  transform_matrix.hpp
source/core/: CMakeLists.txt  backend_factory.cpp  engine.cpp  engine.hpp  world.cpp  world.hpp  world_decs.hpp
source/engine/: defacto.cpp  defacto_api.hpp  engine.cpp  ui.cpp
source/engine/assets/: asset_manager.cpp
source/engine/math/: math.cpp
source/engine/memory/: arena.cpp
source/engine/platform/: glfw.cpp  os_windows.cpp  platform.hpp  platform_os.hpp  platform_window.hpp  window_glfw.cpp  windows.cpp
source/engine/render/: renderer.cpp
source/engine/resources/: bitcount_regular.json
source/engine/ui/: ui.cpp
source/engine/utils/: string.cpp
source/example/: game.cpp  game.hpp  scp.cpp  scp_api.hpp
source/example/ui/: agents.cpp  clay.cpp  menu.cpp  missions.cpp  shared.cpp  squads.cpp
source/input/: CMakeLists.txt  input.hpp
source/math/: CMakeLists.txt  math.hpp
source/observer/: CMakeLists.txt  observer.hpp  subject.hpp  subscription.hpp
source/render/: CMakeLists.txt  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  window.hpp
source/ui_debug/: CMakeLists.txt  ui_manager.cpp  ui_manager.hpp  widget.hpp  world_outliner.cpp  world_outliner.hpp
source/ui_debug/world_outliner/: CMakeLists.txt  camera.cpp  camera.hpp  component_widget.hpp  metadata-info.cpp  metadata-info.hpp  metadata.cpp  metadata.hpp  model.cpp  model.hpp  point_light.cpp  point_light.hpp  transform-info.cpp  transform-info.hpp  transform.cpp  transform.hpp  world_outliner.cpp  world_outliner.hpp
source/utils/: CMakeLists.txt  file_io.hpp  function_traits.hpp  sparse_set.hpp
source/world/: CMakeLists.txt  object.hpp  world.cpp  world.hpp  world_entt.hpp
